# chatbot-gemini

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
