[tool.poetry]
name = "chatbot-gemini"
version = "0.1.0"
description = ""
authors = ["MielAndMoon <dmestasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
google-generativeai = "^0.7.2"
streamlit-mic-recorder = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
